--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -25,10 +25,10 @@ TODO: instruction generation
 DONE - new searchspace facility to generate cross-product instructions.
 DONE - unittests for searchspace.
 DONE - adapt broker to new instruction ifc.
-MAYBE - if shockfreq==0, should we coerce serverdefaultlifetime=0?
+DONOTDO - if shockfreq==0, should we coerce serverdefaultlifetime=0?
     not doing this got us into trouble once with servers expiring and losing
     all docs even when there were no shocks.  hmmm.  
-    
+
 
 TODO: status bookkeeping database
 DONE - add server default half-life, and any other vagrant parameters 
@@ -119,7 +119,7 @@ DONE - add new fields for shock and serverlife.
 DONE - test with --shortlog.  may have to adjust logging and/or extract
     rules.  
 DONE - add values to extract line: deadserversactive, maybe deadserversall.
-FIXME - also add /proc/cpuinfo vendor_id, cpu family, model, speed.
+DONE - also add /proc/cpuinfo vendor_id, cpu family, model, speed.
 DONE - print extracted line to stdout, too, so it gets into actor log.
 DONE - BUG glitchdecay and glitchmaxlife not found for copies=1,2, and
     glitchfreq=0.  huh?
@@ -184,6 +184,9 @@ DONE - add serverdefaultlife to done-hash, to logfilename, and anywhere
 DONE - emptygiantoutput shell script should rescue any data
   that was left over in a previous GiantOutput file into
   the done dir.  
+DONE - emptygiantoutput shell script should remove the old GiantOutput.txt 
+    file completely, or maybe leave an empty file, so that datacleanup.py
+    can put a correct header line on the file.  
 DONE - increase the stuck timer a lot.
 DUNNO - protect against grep failure, linux vs windows.
 DONE - fix y/n switch options to get rid of the need for a value.
